2011-10-02  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/script.c, libgputils/gpreadobj.c, libgputils/gpcofflink.h:
    added LINEARMEM and SHADOW lkr support (currently merely ignored)

2011-09-29  Borut Razem  <borutr@users.sourceforge.net>
  * header/p18f13k22.inc, header/p18f14k22.inc, header/p18f87j11.inc:
    updated from MPASM v5.42; fixed bugs:
    #3401813: corrected header files
    and #3343718: Pic18F13k22 header file
  * ylwrap: added to svn

2011-09-28  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpopcode.c: added reset pic14e enhanced instruction
  * gpasm/testsuite/gpasm.project/asmfiles/op14e.asm,
    gpasm/testsuite/gpasm.project/hexfiles/op14e.hex,
    gpasm/testsuite/gpasm.project/listfiles/op14e.lst:
    added reset pic14e enhanced instruction regression test
  * header/Makefile.am, lkr/Makefile.am, libgputils/Makefile.am,
    libgputils/gpprocessor.c, header/p12f1822.inc, lkr/12f1822_g.lkr:
    applied modified patch #3375989: Add support for 12f1822,
    thanks Richard Hodges
  * Makefile.in, gplink/Makefile.in, libiberty/Makefile.in, gputils/Makefile.in,
    header/Makefile.in, lkr/Makefile.in, doc/Makefile.in, gpasm/Makefile.in,
    man/Makefile.in, man/fr/Makefile.in, libgputils/Makefile.in,
    aclocal.m4, configure: regenerated
  * doc/gputils.lyx: added p12f1822

2011-09-26  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: fixed regtest failures: res directive in absolute mode
  * gpasm/testsuite/gpasm.mchip/hexfiles/res1.hex,
    gpasm/testsuite/gpasm.mchip/listfiles/res1.lst: regenerated with MPASM 5.42
    gpasm/testsuite/gpasm.project/asmfiles/data2.asm:
    use processor 16f84 instead 16c84 since 16c84 is unknown in MPASM 5.42
  * gpasm/testsuite/gpasm.project/listfiles/data1.lst,
    gpasm/testsuite/gpasm.project/listfiles/data2.lst,
    gpasm/testsuite/gpasm.project/listfiles/data3.lst: regenerated
  * gpasm.mchip/asmfiles/szee16.asm: