@@ -1,3 +1,7 @@
+2011-10-09  Marko Kohtala  <marko.kohtala@gmail.com>
+  * libgputils/gpreadobj.c (gp_read_file): Revert previous change in
+  determining file size as it does not compile.
+
 2011-10-02  Borut Razem  <borutr@users.sourceforge.net>
   * gplink/script.c, libgputils/gpreadobj.c, libgputils/gpcofflink.h:
     added LINEARMEM and SHADOW lkr support (currently merely ignored)
